Rewrite README in English with comprehensive documentation
Replaces the minimal French README with a full English version covering
features, modes, commands, formula syntax, setup instructions, and
project structure.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>