@@ -1,11 +1,102 @@
-# WeSpreadSheet
+# VimiCalc
 
-Un tableur simple qui fonctionne comme Vim.
+A spreadsheet application with Vim-style modal editing, built with Java and JavaFX.
 
-Dépendences:
- - JavaFX 17
- - JRE 17
+VimiCalc (also called WeSpreadSheet) combines the functionality of a traditional spreadsheet with Vim's keyboard-driven workflow. Navigate cells with `hjkl`, edit with modal keybindings, write formulas in Reverse Polish Notation, record macros, and more — all without touching the mouse.
 
-Comment l'utiliser: 
-- Modifier les filepaths dans le script approprié (wss.sh ou wss.ps1, selon le système)
-- Exécuter ce script
+## Features
+
+- **Modal editing** — 6 modes inspired by Vim: Normal, Insert, Formula, Command, Visual, and Help
+- **Vim-style navigation** — `h/j/k/l` movement, multipliers (`5j`), and familiar keybindings (`d`, `y`, `p`, `i`, `a`)
+- **RPN formulas** — Reverse Polish Notation formula engine with cell references, ranges (`B2:D3`), and relative coordinates (`kl -3j`)
+- **Matrix operations** — `matMul`, `det`, `transpose`, `sum`, `avg`, `min`, `max`, and more
+- **Macros** — Record with `q`, replay with `@`, chain with multipliers (`5@a`)
+- **Conditional execution** — `<formula{then{else}` syntax for conditional key commands
+- **Cell merging** — Select cells in Visual mode and press `m`
+- **Cell formatting** — Background colors, text colors, and bold via command mode
+- **Undo/redo** — `u` to undo, `Ctrl-R` to redo
+- **Dependency tracking** — Automatic propagation when referenced cells change
+- **File persistence** — Save/load spreadsheets in `.wss` format
+
+## Modes
+
+| Mode | Enter with | Purpose |
+|------|-----------|---------|
+| **Normal** | `ESC` | Navigation and key commands |
+| **Insert** | `i` or `a` | Plain text entry |
+| **Formula** | `f` | RPN formula entry (confirm with `Enter`, cancel with `ESC`) |
+| **Visual** | `v` | Multi-cell selection, merging, bulk operations |
+| **Command** | `:` | Vim-style commands (`:w`, `:q`, `:resCol`, etc.) |
+| **Help** | `:h` or `:help` | Built-in documentation |
+
+## Commands
+
+| Command | Description |
+|---------|-------------|
+| `:w [file]` | Save spreadsheet |
+| `:e [file]` | Open spreadsheet |
+| `:q` | Quit |
+| `:wq` | Save and quit |
+| `:resCol [pixels]` | Resize column width |
+| `:resRow [pixels]` | Resize row height |
+| `:cellColor [color]` | Set cell background color |
+| `:txtColor [color]` | Set text color |
+| `:boldTxt` | Toggle bold text |
+
+## Formula Examples
+
+Formulas use Reverse Polish Notation (operands before operators):
+
+```
+3 5 +              → 8
+B2:D3 F7:G9 matMul → matrix multiplication of two ranges
+A1:A10 sum         → sum of a range
+kl -3j / 3 mod     → relative cell reference with arithmetic
+```
+
+## Requirements
+
+- Java 17+
+- JavaFX 17+
+
+## Running
+
+1. Edit the file paths in the launch script for your system (`wss.sh` for Linux/macOS, `wss.ps1` for Windows) to point to your JavaFX SDK location.
+2. Run the script:
+
+```bash
+# Linux / macOS
+./wss.sh [file.wss]
+
+# Windows
+.\wss.ps1 [file.wss]
+```
+
+Or run manually:
+
+```bash
+java --module-path "/path/to/javafx-sdk-17/lib" \
+  --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web \
+  -jar out/artifacts/VimiCalc_jar/VimiCalc.jar [file.wss]
+```
+
+## Demo Files
+
+The `demos/` directory contains example spreadsheets:
+
+- **fizzbuzz.wss** — FizzBuzz implemented in spreadsheet formulas
+- **rule110.wss** — Rule 110 cellular automaton
+- **various.wss** — Miscellaneous feature demonstrations
+
+## Project Structure
+
+```
+src/main/java/vimicalc/
+├── Main.java              # Entry point
+├── controller/            # Input handling, mode switching, key commands
+├── model/                 # Cell, Sheet, Formula (RPN engine), Command
+├── view/                  # Camera, rendering, UI components, help menu
+└── utils/                 # Coordinate conversions, helpers
+```
+
+The application follows an MVC architecture, uses a Canvas-based renderer, and stores spreadsheet data via Java serialization.
